<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ssd1306_display</name>
  <version>1.0.0</version>
  <description>
    ROS2 package for SSD1306 OLED display library.
    Based on the original work by Andrew Duncan (MIT License).
  </description>
  <maintainer email="alejodiscovery20@gmail.com">root</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
